update cv and slides

--- a/research/publications/index.qmd
+++ b/research/publications/index.qmd
@@ -5,9 +5,15 @@ title: Publications
 # Peer-reviewed academic publications
 <!-- references -->
 
+## 2025
+
+- Altreiter C., **Gräbner-Radkowitsch C.**, Pühringer S., Rogojanu A., Wolfmayr G. (2025). Theorizing Competition: An Interdisciplinary Framework, _Competition \& Change_: 10245294251330343. doi: [10.1177/10245294251330343](https://doi.org/10.1177/10245294251330343)
+
+- **Gräbner-Radkowitsch C.**, Kapeller J., Porak L., Rath J. (2025). Pluralismus in Der Volkswirtschaftslehre Und Seine Relevanz Für Die Debatte Um Armut, in: Armutskonferenz, Attac, GESÖB, fair sorgen (Eds.): _Wir Alle Machen Wirtschaft. Für Eine Zukunftsfähige Wirtschafts- Und Finanzbildung_. Wien: mandelbaum verlag, pp. 75--86.
+
 ## 2024
 
-- Glassmann U., **Gräbner-Radkowitsch C.** (Eds.) (2024). _The Political Economy of Italy and the Center-Periphery Perspective on Europe_. Marburg: Metropolis. [Available online](https://www.metropolis-verlag.de/dl/OpenAccess/1560.pdf;jsessionid=1F0FC253342799BE437CBD7864490C47).
+- Glassmann U., **Gräbner-Radkowitsch C.** (Eds.) (2024). _The Political Economy of Italy and the Center-Periphery Perspective on Europe_. Marburg: Metropolis.
 
 - **Gräbner-Radkowitsch C.**, Kapeller J. (2024). Development Models in the EU: Opportunities and Challenges, in: Glassmann U., **Gräbner-Radkowitsch C.** (Eds.): _The Political Economy of Italy and the Center-Periphery Perspective on Europe_. Marburg: Metropolis, pp. 49--79.
 
@@ -67,7 +73,7 @@ title: Publications
 
 - Kapeller J., **Gräbner C.**, Heimberger P. (2019). Economic Polarisation in Europe: Causes and Policy Options, _wiiw Research Report_, **440**.
 
-- Kapeller J., **Gräbner C.**, Heimberger P. (2019). _Wirtschaftliche Polarisierung in Europa_. Berlin: Friedrich-Ebert-Stiftung. [Available online](https://www.fes.de/wirtschaftliche-polarisierung-in-europa).
+- Kapeller J., **Gräbner C.**, Heimberger P. (2019). _Wirtschaftliche Polarisierung in Europa_. Berlin: Friedrich-Ebert-Stiftung.
 
 ## 2018
 
@@ -115,15 +121,19 @@ title: Publications
 
 <!-- nonacademicpubs -->
 
+## 2025
+
+- **Gräbner-Radkowitsch C.**, Strunk B. (2025). The `Degrowth' Movement Envisions Global Climate Justice, but Must Adapt to Global South Realities, in: _The Conversation_, June: [Link](https://theconversation.com/the-degrowth-movement-envisions-global-climate-justice-but-must-adapt-to-global-south-realities-238276).
+
 ## 2024
 
 - **Gräbner-Radkowitsch C.**, Lage J., Wiese F. (2024). On the Economic Significance of Sufficiency, in: _Economists4Future Blog_, April: [Link](https://www.econ4future.org/post/on-the-economic-significance-of-sufficiency).
 
-- **Gräbner-Radkowitsch C.**, Strunk B. (2024). Quelle Place Pour Le Sud Global Dans La D\'ecroissance?, in: _The Conversation_, March: [Link](https://theconversation.com/quelle-place-pour-le-sud-global-dans-la-decroissance-225209).
+- **Gräbner-Radkowitsch C.**, Strunk B. (2024). Quelle Place Pour Le Sud Global Dans La D\'ecroissance?, in: _The Conversation_, July: [Link](https://theconversation.com/quelle-place-pour-le-sud-global-dans-la-decroissance-225209).
 
 ## 2023
 
-- **Gräbner-Radkowitsch C.**, Strunk B. (2023). Degrowth and the Global South: Remarks on the Twin Problem of Structural Interdependencies, in: _Developing Economics_, November: [Link](https://developingeconomics.org/2023/11/06/degrowth-and-the-global-south-remarks-on-the-twin-problem-of-structural-interdependencies/).
+- **Gräbner-Radkowitsch C.**, Strunk B. (2023). Degrowth and the Global South: Remarks on the Twin Problem of Structural Interdependencies, in: _Developing Economics_, June: [Link](https://developingeconomics.org/2023/11/06/degrowth-and-the-global-south-remarks-on-the-twin-problem-of-structural-interdependencies/).
 
 - **Gräbner-Radkowitsch C.**, Strunk B. (2023). Degrowth Und Der Globale Süden, in: _Postwachstum Blog_, October: [Link](https://www.postwachstum.de/degrowth-und-der-globale-sueden-20231023).
 
@@ -137,9 +147,9 @@ title: Publications
 
 - Altreiter C., Rogojanu A., **Gräbner C.**, Pühringer S., Wolfmayr G. (2021). Befristete Uni-Stellen: Drei Fehlschlüsse Mit Gravierenden Folgen, in: _Der Standard_, July: [Link](https://www.derstandard.at/story/2000128392310/befristete-uni-stellen-drei-fehlschluesse-mit-gravierenden-folgen).
 
-- **Gräbner-Radkowitsch C.**, Strunk B. (2021). Pluralism in Economics -- Its Critiques and Their Lessons, in: _Developing Economics_, February: [Link](https://developingeconomics.org/2021/02/03/pluralism-in-economics-its-critiques-and-their-lessons/).
+- **Gräbner-Radkowitsch C.**, Strunk B. (2021). Pluralism in Economics -- Its Critiques and Their Lessons, in: _Developing Economics_, March: [Link](https://developingeconomics.org/2021/02/03/pluralism-in-economics-its-critiques-and-their-lessons/).
 
-- **Gräbner-Radkowitsch C.**, Hafele J. (2021). What Are the Reasons for the Lack of Overall Convergence in the EU? A Structuralist View, in: _The Rebuilding Macroeconomics Blog_, April: [Link](https://www.rebuildingmacroeconomics.ac.uk/post/what-are-the-reasons-for-the-lack-of-overall-convergence-in-the-eu-a-structuralist-view).
+- **Gräbner-Radkowitsch C.**, Hafele J. (2021). What Are the Reasons for the Lack of Overall Convergence in the EU? A Structuralist View, in: _The Rebuilding Macroeconomics Blog_, August: [Link](https://www.rebuildingmacroeconomics.ac.uk/post/what-are-the-reasons-for-the-lack-of-overall-convergence-in-the-eu-a-structuralist-view).
 
 - **Gräbner C.**, Heimberger P., Kapeller J., Schütz B. (2021). Ökonomische Offenheit: Die Vermessung Der Globalisierung, in: _Oekonomenstimme_, February: [Link](https://www.oekonomenstimme.org/artikel/2021/02/oekonomische-offenheit-die-vermessung-der-globalisierung/).
 
@@ -147,11 +157,11 @@ title: Publications
 
 - **Gräbner C.**, Strunk B. (2020). Kritik an Der Pluralen Ökonomik -- Was Ist Dran Und Warum Ist Das Wichtig?, in: _Oekonomenstimme_, November: [Link](https://www.oekonomenstimme.org/artikel/2020/11/kritik-an-der-pluralen-oekonomik--was-ist-dran-und-warum-ist-das-wichtig/).
 
-- Heimberger P., **Gräbner C.**, Kapeller J., Schütz B. (2020). Die Vermessung Der Globalisierung, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, October: [Link](https://makronom.de/oekonomische-offenheit-die-vermessung-der-globalisierung-37176).
+- Heimberger P., **Gräbner C.**, Kapeller J., Schütz B. (2020). Die Vermessung Der Globalisierung, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, January: [Link](https://makronom.de/oekonomische-offenheit-die-vermessung-der-globalisierung-37176).
 
 ## 2019
 
-- **Gräbner C.**, Heimberger P., Kapeller J., Schütz B. (2019). Eine Strategie Gegen Die Ökonomische Polarisierung Europas, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, July: [Link](https://makronom.de/eine-strategie-gegen-die-oekonomische-polarisierung-europas-32115).
+- **Gräbner C.**, Heimberger P., Kapeller J., Schütz B. (2019). Eine Strategie Gegen Die Ökonomische Polarisierung Europas, in: _Makronom -- Online Magazin für Wirtschaftspolitik_, September: [Link](https://makronom.de/eine-strategie-gegen-die-oekonomische-polarisierung-europas-32115).
 
 - **Gräbner C.** (2019). Why Europe Is Drifting Apart and What to Do about It, in: _The Rebuilding Macroeconomics Blog_, April: [Link](https://www.rebuildingmacroeconomics.ac.uk/europe-drifting-apart/).
 
