--- a/research/publications/nonacademic.bib
+++ b/research/publications/nonacademic.bib
@@ -20,9 +20,18 @@
   title = {Degrowth and the {{Global South}}: Remarks on the Twin Problem of Structural Interdependencies},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2023},
-  month = nov,
+  month = jun,
   journal = {Developing Economics},
   url = {https://developingeconomics.org/2023/11/06/degrowth-and-the-global-south-remarks-on-the-twin-problem-of-structural-interdependencies/}
+}
+
+@misc{grabner-radkowitschDegrowthMovementEnvisions2025,
+  title = {The `Degrowth' Movement Envisions Global Climate Justice, but Must Adapt to Global South Realities},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
+  year = {2025},
+  month = jun,
+  journal = {The Conversation},
+  url = {https://theconversation.com/the-degrowth-movement-envisions-global-climate-justice-but-must-adapt-to-global-south-realities-238276}
 }
 
 @misc{grabner-radkowitschDegrowthUndGlobale2023,
@@ -47,7 +56,7 @@
   title = {Pluralism in Economics -- Its Critiques and Their Lessons},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2021},
-  month = feb,
+  month = mar,
   journal = {Developing Economics},
   url = {https://developingeconomics.org/2021/02/03/pluralism-in-economics-its-critiques-and-their-lessons/}
 }
@@ -56,7 +65,7 @@
   title = {Quelle Place Pour Le {{Sud}} Global Dans La D{\'e}croissance?},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2024},
-  month = mar,
+  month = jul,
   journal = {The Conversation},
   url = {https://theconversation.com/quelle-place-pour-le-sud-global-dans-la-decroissance-225209}
 }
@@ -65,7 +74,7 @@
   title = {What Are the {{Reasons}} for the {{Lack}} of {{Overall Convergence}} in the {{EU}}? {{A Structuralist View}}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Hafele, Jakob},
   year = {2021},
-  month = apr,
+  month = aug,
   journal = {The Rebuilding Macroeconomics Blog},
   url = {https://www.rebuildingmacroeconomics.ac.uk/post/what-are-the-reasons-for-the-lack-of-overall-convergence-in-the-eu-a-structuralist-view}
 }
@@ -101,7 +110,7 @@
   title = {Eine {{Strategie}} Gegen Die {\"O}konomische {{Polarisierung Europas}}},
   author = {Gr{\"a}bner, Claudius and Heimberger, Philipp and Kapeller, Jakob and Sch{\"u}tz, Bernhard},
   year = {2019},
-  month = jul,
+  month = sep,
   journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/eine-strategie-gegen-die-oekonomische-polarisierung-europas-32115}
 }
@@ -128,7 +137,7 @@
   title = {Die {{Vermessung}} Der {{Globalisierung}}},
   author = {Heimberger, Philipp and Gr{\"a}bner, Claudius and Kapeller, Jakob and Sch{\"u}tz, Bernhard},
   year = {2020},
-  month = oct,
+  month = jan,
   journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/oekonomische-offenheit-die-vermessung-der-globalisierung-37176}
 }
