--- a/research/publications/publications.bib
+++ b/research/publications/publications.bib
@@ -6,7 +6,24 @@
   volume = {50},
   number = {6},
   pages = {104258},
-  doi = {10.1016/j.respol.2021.104258}
+  doi = {10.1016/j.respol.2021.104258},
+  keywords = {2) ABM,2) Economic Complexity,2) Macroeconomics,2) Technological change}
+}
+
+@article{altreiterTheorizingCompetitionInterdisciplinary2025,
+  title = {Theorizing Competition: {{An}} Interdisciplinary Framework},
+  shorttitle = {Theorizing Competition},
+  author = {Altreiter, Carina and {Gr{\"a}bner-Radkowitsch}, Claudius and P{\"u}hringer, Stephan and Rogojanu, Ana and Wolfmayr, Georg},
+  year = {2025},
+  month = apr,
+  journal = {Competition \& Change},
+  pages = {10245294251330343},
+  issn = {1024-5294, 1477-2221},
+  doi = {10.1177/10245294251330343},
+  urldate = {2025-04-08},
+  abstract = {This paper introduces a framework to facilitate an interdisciplinary analysis of ``competition.'' While such an interdisciplinary analysis can be justified by referencing the various fields of social and economic life in which ``competition'' is important, three challenges are found to aggravate such endeavor: First, a challenge of scope, which refers to the generality of the concept of ``competition'' and the fact that contributions differ with regard to the competing actors, the objects of competition, as well as the institutional specificities of competition; second, a challenge of methodology, which exists because different scientific disciplines study competition with distinct methods and epistemological orientations, and, third, a challenge of normativity, which refers to the fact that debates about competition have been closely linked to controversial political debates. To mitigate these challenges, and to explicate the often implicit meta-theoretical assumptions in the scope, methodological, and normative dimension, this paper introduces a meta-theoretical framework. Its usefulness is illustrated via a comparative description of selected contributions from the social sciences and humanities. Despite its limited scope, it yields some preliminary conjectures that may inspire future research: first, there are sufficient common elements across different concepts of competition that justify an interdisciplinary approach to study competition; second, apart from differences between disciplines, there are remarkable differences within disciplines that are at least of similar importance. Finally, there are important interdependencies between the meta-theoretical dimensions considered in the framework.},
+  langid = {english},
+  file = {/Users/dozioegrc/Zotero/storage/D5V6MLSS/Altreiter et al. - 2025 - Theorizing competition An interdisciplinary framework.pdf}
 }
 
 @article{cordesCollapseCooperationEndogeneity2021,
@@ -23,7 +40,8 @@
   doi = {10.1007/s00191-021-00739-2},
   urldate = {2024-06-25},
   abstract = {Abstract             Decline and break-up of institutionalized cooperation, at all levels, has occurred frequently. Some of its concomitants, such as international migration, have become topical in the globalized world. Aspects of the phenomenon have also become known as failing states. However, the focus in most social sciences has been on institutional emergence and persistence, not collapse. We develop an endogenous explanation of collapsing institutions. Collapse may be an implication of the very economic success of institutionalized cooperation and of increasing system complexity, when cognitive conditions for effective collective decision-making do not proportionately evolve. Moreover, we show that collapse is not a simple logical reverse of emergence. Rather, institutions break up at different factor constellations than the ones prevailing at emergence. We approach endogenous institutional break-up and its asymmetry from various paradigmatic and disciplinary perspectives, employing psychology, anthropology, network analysis, and institutional economics. These perspectives cover individuals, groups, interaction-arenas, populations, and social networks.},
-  langid = {english}
+  langid = {english},
+  file = {/Users/dozioegrc/Zotero/storage/S6GK7IDI/Cordes et al. - 2021 - The collapse of cooperation the endogeneity of in.pdf}
 }
 
 @article{Degrowth23,
@@ -38,7 +56,8 @@
   issn = {09218009},
   doi = {10.1016/j.ecolecon.2023.107946},
   urldate = {2023-08-25},
-  langid = {english}
+  langid = {english},
+  file = {/Users/dozioegrc/Zotero/storage/N3M9DTG4/Gräbner-Radkowitsch and Strunk - 2023 - Degrowth and the Global South The twin problem of.pdf}
 }
 
 @article{flechtnerHeterogeneousRelationshipIncome2019,
@@ -58,8 +77,8 @@
   year = {2024},
   publisher = {Metropolis},
   address = {Marburg},
-  url = {https://www.metropolis-verlag.de/dl/OpenAccess/1560.pdf;jsessionid=1F0FC253342799BE437CBD7864490C47},
-  isbn = {978-3-7316-1560-6}
+  isbn = {978-3-7316-1560-6},
+  file = {/Users/dozioegrc/Zotero/storage/ECKT7U2Y/Glassmann and Gräbner-Radkowitsch - 2024 - The Political Economy of Italy and the Center-Peri.pdf}
 }
 
 @article{grabner-radkowitschCompetingSustainabilityInstitutionalist2023,
@@ -75,7 +94,8 @@
   issn = {0021-3624, 1946-326X},
   doi = {10.1080/00213624.2023.2203637},
   urldate = {2024-01-31},
-  langid = {english}
+  langid = {english},
+  file = {/Users/dozioegrc/Zotero/storage/QUICRQYG/Gräbner-Radkowitsch et al. - 2023 - Competing for Sustainability An Institutionalist .pdf}
 }
 
 @article{grabner-radkowitschDegrowthGlobalSouth2023,
@@ -91,7 +111,8 @@
   issn = {0021-3624, 1946-326X},
   doi = {10.1080/00213624.2023.2201640},
   urldate = {2024-01-31},
-  langid = {english}
+  langid = {english},
+  file = {/Users/dozioegrc/Zotero/storage/AYHB8I3V/Gräbner-Radkowitsch and Strunk - 2023 - Degrowth and the Global South How Institutionalis.pdf}
 }
 
 @incollection{grabner-radkowitschDevelopmentModelsEU2024,
@@ -114,7 +135,8 @@
   pages = {81--102},
   publisher = {Routledge},
   address = {London and New York},
-  doi = {10.4324/9781003144366-6}
+  doi = {10.4324/9781003144366-6},
+  file = {/Users/dozioegrc/Zotero/storage/PI3MA5EN/Gräbner-Radkowitsch - 2022 - Elements of an evolutionary approach to comparativ.pdf}
 }
 
 @article{grabner-radkowitschEvolutionDebtorcreditorRelationships2022,
@@ -126,7 +148,19 @@
   pages = {262--289},
   issn = {0954-349X},
   doi = {10.1016/j.strueco.2022.05.004},
-  abstract = {This paper analyzes the emergence of internal debtor-creditor relationships within a monetary union. We develop a stock-flow consistent model consisting of three regions -- North, South, and the Rest of the World (RoW) --, where North and South form a monetary union. We show how the simultaneous presence of investment booms, declining export performance and mercantilist policies within a monetary union can interact in order to create Minsky-type boom-bust cycles. Fiscal policy and a Eurozone lender of last resort can help sustain economic life under existing structural imbalances, but without eliminating the root causes of boom-bust patterns.}
+  abstract = {This paper analyzes the emergence of internal debtor-creditor relationships within a monetary union. We develop a stock-flow consistent model consisting of three regions -- North, South, and the Rest of the World (RoW) --, where North and South form a monetary union. We show how the simultaneous presence of investment booms, declining export performance and mercantilist policies within a monetary union can interact in order to create Minsky-type boom-bust cycles. Fiscal policy and a Eurozone lender of last resort can help sustain economic life under existing structural imbalances, but without eliminating the root causes of boom-bust patterns.},
+  file = {/Users/dozioegrc/Zotero/storage/9GCIB6AP/Gräbner-Radkowitsch et al. - 2022 - The evolution of debtor-creditor relationships wit.pdf}
+}
+
+@incollection{grabner-radkowitschPluralismusVolkswirtschaftslehreUnd2025,
+  title = {Pluralismus in Der {{Volkswirtschaftslehre}} Und Seine {{Relevanz}} F{\"u}r Die {{Debatte}} Um {{Armut}}},
+  booktitle = {Wir Alle Machen {{Wirtschaft}}. {{F{\"u}r}} Eine Zukunftsf{\"a}hige {{Wirtschafts-}} Und {{Finanzbildung}}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Kapeller, Jakob and Porak, Laura and Rath, Johanna},
+  editor = {{Armutskonferenz} and {Attac} and {GES{\"O}B} and {fair sorgen}},
+  year = {2025},
+  pages = {75--86},
+  publisher = {mandelbaum verlag},
+  address = {Wien}
 }
 
 @article{grabner-radkowitschTradeModelsEuropean2022,
@@ -151,7 +185,7 @@
   pages = {104--114},
   publisher = {Heinrich B{\"o}ll Foundation},
   address = {Berlin},
-  url = {https://eu.boell.org/en/fostering-socio-economic-convergence}
+  file = {/Users/dozioegrc/Zotero/storage/CBWLI36A/Gräbner-Radkowitsch und Hafele - 2022 - Why Fostering Socio-economic Convergence in the EU.pdf}
 }
 
 @article{grabnerAgentbasedComputationalModels2016,
@@ -174,7 +208,8 @@
   volume = {32},
   number = {1},
   pages = {87--121},
-  doi = {10.1007/s00191-021-00732-9}
+  doi = {10.1007/s00191-021-00732-9},
+  keywords = {2) ABM,2) Technological change}
 }
 
 @article{grabnerComplementaryRelationshipInstitutional2017,
@@ -201,7 +236,7 @@
   doi = {10.3790/jce.137.3.193}
 }
 
-@incollection{grabnerDealingAdequatelyPolitical2017a,
+@incollection{grabnerDealingAdequatelyPolitical2017,
   title = {Dealing Adequately with the Political Element in Formal Modelling},
   booktitle = {Theory and {{Method}} of {{Evolutionary Political Economy}}},
   author = {Gr{\"a}bner, Claudius},
@@ -233,7 +268,8 @@
   volume = {44},
   number = {3},
   pages = {647--669},
-  doi = {10.1093/cje/bez059}
+  doi = {10.1093/cje/bez059},
+  file = {/Users/dozioegrc/Zotero/storage/RY7SL9YL/Gräbner et al. - 2020 - Is the Eurozone disintegrating Macroeconomic dive.pdf}
 }
 
 @article{grabnerFormalApproachesSocioeconomic2018,
@@ -270,7 +306,7 @@
   number = {3},
   doi = {10.18564/jasss.3772},
   abstract = {by Claudius Graebner},
-  note = {by Claudius Graebner}
+  file = {/Users/dozioegrc/Zotero/storage/I9L844IS/Gräbner - 2018 - How to Relate Models to Reality An Epistemologica.pdf}
 }
 
 @article{grabnerMeasuringEconomicOpenness2018,
@@ -292,7 +328,8 @@
   series = {The {{Routledge Handbook}} of {{Heterodox Economics}}},
   pages = {145--159},
   publisher = {Routledge},
-  address = {London, UK, New York, NY}
+  address = {London, UK, New York, NY},
+  file = {/Users/dozioegrc/Zotero/storage/IBFRGNP5/Gräbner and Kapeller - 2017 - The Micro-Macro Link in Heterodox Economics.pdf}
 }
 
 @article{grabnerNewPerspectivesInstitutionalist2015,
@@ -317,8 +354,7 @@
   number = {3},
   pages = {23--29},
   doi = {10.14512/tatup.26.3.23},
-  abstract = {Mit der zunehmenden Digitalisierung und Vernetzung {\"o}konomischer Systeme haben plattformbasierte Interaktionsbeziehungen stark an Bedeutung gewonnen. Hier werden zwei oder mehr Nutzungsgruppen durch eine dritte Seite, die Plattform, zusammengebracht. Die Interaktion wird in solchen zweiseitigen M{\"a}rkten von den Plattformbetreibern kontrolliert. Kreditkartensysteme, Softwarem{\"a}rkte oder werbefinanzierte Online-Communities stellen typische Beispiele dar. Da die Analyse von zweiseitigen M{\"a}rkten mit Gleichgewichtsmodellen aufgrund der algebraischen Struktur des Problems in der Regel nicht praktikabel ist, pr{\"a}sentieren wir im vorliegenden Beitrag ein agentenbasiertes Modell, welches in einem k{\"u}rzlich erschienenen Artikel ausf{\"u}hrlicher diskutiert wird. Anhand von illustrativen Beispielen verdeutlichen wir die Implikationen eines agentenbasierten Ansatzes f{\"u}r die Innovations{\"o}konomik im Allgemeinen und das Studium von Technologieentwicklung im Besonderen.},
-  note = {Mit der zunehmenden Digitalisierung und Vernetzung {\"o}konomischer Systeme haben plattformbasierte Interaktionsbeziehungen stark an Bedeutung gewonnen. Hier werden zwei oder mehr Nutzungsgruppen durch eine dritte Seite, die Plattform, zusammengebracht. Die Interaktion wird in solchen zweiseitigen M{\"a}rkten von den Plattformbetreibern kontrolliert. Kreditkartensysteme, Softwarem{\"a}rkte oder werbefinanzierte Online-Communities stellen typische Beispiele dar. Da die Analyse von zweiseitigen M{\"a}rkten mit Gleichgewichtsmodellen aufgrund der algebraischen Struktur des Problems in der Regel nicht praktikabel ist, pr{\"a}sentieren wir im vorliegenden Beitrag ein agentenbasiertes Modell, welches in einem k{\"u}rzlich erschienenen Artikel ausf{\"u}hrlicher diskutiert wird. Anhand von illustrativen Beispielen verdeutlichen wir die Implikationen eines agentenbasierten Ansatzes f{\"u}r die Innovations{\"o}konomik im Allgemeinen und das Studium von Technologieentwicklung im Besonderen.}
+  abstract = {Mit der zunehmenden Digitalisierung und Vernetzung {\"o}konomischer Systeme haben plattformbasierte Interaktionsbeziehungen stark an Bedeutung gewonnen. Hier werden zwei oder mehr Nutzungsgruppen durch eine dritte Seite, die Plattform, zusammengebracht. Die Interaktion wird in solchen zweiseitigen M{\"a}rkten von den Plattformbetreibern kontrolliert. Kreditkartensysteme, Softwarem{\"a}rkte oder werbefinanzierte Online-Communities stellen typische Beispiele dar. Da die Analyse von zweiseitigen M{\"a}rkten mit Gleichgewichtsmodellen aufgrund der algebraischen Struktur des Problems in der Regel nicht praktikabel ist, pr{\"a}sentieren wir im vorliegenden Beitrag ein agentenbasiertes Modell, welches in einem k{\"u}rzlich erschienenen Artikel ausf{\"u}hrlicher diskutiert wird. Anhand von illustrativen Beispielen verdeutlichen wir die Implikationen eines agentenbasierten Ansatzes f{\"u}r die Innovations{\"o}konomik im Allgemeinen und das Studium von Technologieentwicklung im Besonderen.}
 }
 
 @article{grabnerPandemicPushesPolarisation2020,
@@ -330,7 +366,9 @@
   number = {3},
   pages = {425--438},
   doi = {10.1007/s40812-020-00163-w},
-  abstract = {This paper discusses the uneven consequences of the macroeconomic fallout from the Coronavirus and related economic policy responses against the background of an analysis of longer-term macroeconomic divergence in the Eurozone. We show that the macroeconomic impact of the Corona crisis is estimated to be more severe in Southern Eurozone countries than in Northern Eurozone countries, which further reinforces the tendency of an increasing economic polarisation. This polarisation process can be traced back to existing differences in production structures and uneven vulnerabilities of the underlying growth models. As a consequence, any policy response to the Corona crisis that does not take the deeper problems of structural polarisation into account will suffer from limited impact in the medium to long run.}
+  abstract = {This paper discusses the uneven consequences of the macroeconomic fallout from the Coronavirus and related economic policy responses against the background of an analysis of longer-term macroeconomic divergence in the Eurozone. We show that the macroeconomic impact of the Corona crisis is estimated to be more severe in Southern Eurozone countries than in Northern Eurozone countries, which further reinforces the tendency of an increasing economic polarisation. This polarisation process can be traced back to existing differences in production structures and uneven vulnerabilities of the underlying growth models. As a consequence, any policy response to the Corona crisis that does not take the deeper problems of structural polarisation into account will suffer from limited impact in the medium to long run.},
+  keywords = {2) EU,2) Macroeconomics,6) Inequality},
+  file = {/Users/dozioegrc/Zotero/storage/6BZ8I4D7/Gräbner et al. - 2020 - Pandemic pushes polarisation the Corona crisis an.pdf}
 }
 
 @article{grabnerPluralismEconomicsIts2020,
@@ -341,7 +379,9 @@
   volume = {27},
   number = {4},
   pages = {311--329},
-  doi = {10.1080/1350178x.2020.1824076}
+  doi = {10.1080/1350178x.2020.1824076},
+  keywords = {1) Methodology,1) Philosophy of Economics,1) Pluralism,4) Sociology of Economics},
+  file = {/Users/dozioegrc/Zotero/storage/LGLK8B6E/Gräbner and Strunk - 2020 - Pluralism in economics its critiques and their le.pdf}
 }
 
 @book{grabnerPolicyImplicationsRecent2016,
@@ -361,8 +401,7 @@
   month = jan,
   pages = {60--73},
   publisher = {iRights media},
-  address = {Berlin},
-  url = {http://fgw-nrw.de/fileadmin/user\_upload/WND\_iRightsMedia\_2Aufl\_final-web.pdf}
+  address = {Berlin}
 }
 
 @article{grabnerStructuralChangeTimes2020,
@@ -375,7 +414,7 @@
   pages = {1467--1495},
   doi = {10.1007/s00191-019-00639-6},
   abstract = {This paper analyzes the dynamics of structural polarization and macroeconomic divergence in the context of European integration, where the latter is primarily understood as an increase in economic...},
-  note = {This paper analyzes the dynamics of structural polarization and macroeconomic divergence in the context of European integration, where the latter is primarily understood as an increase in economic...}
+  file = {/Users/dozioegrc/Zotero/storage/Q9TQSZR6/Gräbner et al. - 2020 - Structural change in times of increasing openness.pdf}
 }
 
 @article{grabnerTrustControlInformal2018,
@@ -398,7 +437,8 @@
   pages = {1--26},
   issn = {0927-7099},
   doi = {10.1007/s10614-020-09994-0},
-  abstract = {We study the functioning of informal value transfer systems through the example of Hawala. By complementing the institutional theory with computational experiments that use the first agent-based model of IVTS, we examine the roles of generalized trust and social control for the emergence, stability, and efficiency of Hawala. We show that both trust and control are necessary, but not sufficient to guarantee its functioning, and that their relationship is time-dependent. The success of Hawala also depends on population size, interaction density, and forgiveness of the agents. Finally, we provide a theoretically grounded operationalization of generalized trust and social control that is applicable to informal exchange systems in general.}
+  abstract = {We study the functioning of informal value transfer systems through the example of Hawala. By complementing the institutional theory with computational experiments that use the first agent-based model of IVTS, we examine the roles of generalized trust and social control for the emergence, stability, and efficiency of Hawala. We show that both trust and control are necessary, but not sufficient to guarantee its functioning, and that their relationship is time-dependent. The success of Hawala also depends on population size, interaction density, and forgiveness of the agents. Finally, we provide a theoretically grounded operationalization of generalized trust and social control that is applicable to informal exchange systems in general.},
+  keywords = {2) ABM,2) Institutions,2) Microeconomics,2) OIE}
 }
 
 @article{grabnerUnderstandingEconomicOpenness2021,
@@ -438,11 +478,7 @@
   urldate = {2024-06-20},
   abstract = {Abstract             The influential position of multinational corporations in the global economy of the twenty-first century is a particularly controversial and timely subject. This paper aims to improve our understanding of this phenomenon by focusing on one particular aspect of it: corporate power. To this end, it first puts forth a number of conceptual clarifications that help to distinguish different kinds of power and the distinct analytical levels at which power is executed. It then focuses on corporate power and studies it against the backdrop of the development of global value chains. The aim of this analysis is twofold: firstly, to review the variety of analytical tools and ontological perspectives that coin current research on corporate power, and secondly, to discuss the causes and practical consequences of asymmetrical power constellations among corporations and between corporations and other actors. This discussion is meant to facilitate a better alignment of applied research on corporate power with pluralist approaches towards rethinking economics.},
   langid = {Englisch},
-  note = {Dokumententyp: Alternativen?
-\par
-Erscheinungsform: Alternativen?
-\par
-Peer-reviewed: ja}
+  file = {/Users/dozioegrc/Zotero/storage/E7BHPINN/Kapeller et al. - 2024 - Corporate power and global value chains current a.pdf}
 }
 
 @article{kapellerEconomicPolarisationEurope2019,
@@ -452,7 +488,7 @@ Peer-reviewed: ja}
   month = jan,
   journal = {wiiw Research Report},
   volume = {440},
-  url = {https://wiiw.ac.at/economic-polarisation-in-europe-causes-and-options-for-action-dlp-5022.pdf}
+  file = {/Users/dozioegrc/Zotero/storage/9JXZ8ED4/Kapeller et al. - 2019 - Economic Polarisation in Europe Causes and Policy.pdf}
 }
 
 @incollection{kapellerKonzernmachtGlobalenGuterketten2021,
@@ -481,8 +517,7 @@ Peer-reviewed: ja}
   author = {Kapeller, Jakob and Gr{\"a}bner, Claudius and Heimberger, Philipp},
   year = {2019},
   publisher = {Friedrich-Ebert-Stiftung},
-  address = {Berlin},
-  url = {https://www.fes.de/wirtschaftliche-polarisierung-in-europa}
+  address = {Berlin}
 }
 
 @article{pereiraErrataPoliticalEconomy2016,
