--- a/talks/keynotes.bib
+++ b/talks/keynotes.bib
@@ -26,7 +26,7 @@
   title = {Automation and Inequalities: {{The}} Merits of a Pluralist Research Program in the Context of Automation},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2022},
-  month = sep,
+  month = jun,
   address = {Parthenope University of Naples},
   abstract = {06.09.2022},
   langid = {english}
@@ -37,7 +37,7 @@
   title = {Developing {{System Theory}} via {{Agent-Based Modeling}}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2021},
-  month = oct,
+  month = jun,
   address = {Hannover},
   abstract = {06.10.2021},
   langid = {english}
@@ -48,7 +48,7 @@
   title = {The Emergence of Debt and Secular Stagnation in an Unequal Society},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2023},
-  month = feb,
+  month = jul,
   address = {Chemnitz University of Technology},
   abstract = {07.02.2023},
   langid = {english}
@@ -65,32 +65,6 @@
   langid = {english}
 }
 
-@misc{graebner-radkowitsch02,
-  type = {{Public lecture}},
-  title = {{Agent-based modelling and complexity economics}},
-  shorttitle = {{Agentenbasiertes Modellieren und Komplexit{\"a}ts{\"o}konomik}},
-  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
-  year = {2024},
-  month = jan,
-  address = {University of Siegen},
-  url = {pdf/24-01-19_ComplexityPluralism.pdf},
-  abstract = {24.01.2024},
-  langid = {german}
-}
-
-@misc{graebner-radkowitsch02a,
-  type = {{Public lecture}},
-  title = {{The Plurality of Pluralist Economics}},
-  shorttitle = {{Die Pluralit{\"a}t der Pluralen {\"O}konomik}},
-  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
-  year = {2024},
-  month = nov,
-  address = {University of Hamburg},
-  url = {pdf/24-11-22_PluralityPluralism.pdf},
-  abstract = {22.11.2024},
-  langid = {german}
-}
-
 @misc{graebner-radkowitschAgentbasedModellingComplexity2023,
   type = {{Public lecture}},
   title = {{Agent-based modelling and complexity economics}},
@@ -101,6 +75,19 @@
   address = {University of Siegen},
   url = {pdf/23-01-26_ComplexityABM.pdf},
   abstract = {23.01.2023},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschAgentbasedModellingComplexity2024,
+  type = {{Public lecture}},
+  title = {{Agent-based modelling and complexity economics}},
+  shorttitle = {{Agentenbasiertes Modellieren und Komplexit{\"a}ts{\"o}konomik}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2024},
+  month = jan,
+  address = {University of Siegen},
+  url = {pdf/24-01-19_ComplexityPluralism.pdf},
+  abstract = {24.01.2024},
   langid = {german}
 }
 
@@ -116,13 +103,13 @@
   langid = {german}
 }
 
-@misc{graebner-radkowitschComplexityEconomicsShort2021a,
+@misc{graebner-radkowitschComplexityEconomicsShort2021,
   type = {{Invited lecture}},
   title = {{Complexity Economics - A short introduction}},
   shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Eine kurze Einf{\"u}hrung}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2021},
-  month = dec,
+  month = mar,
   address = {FU Berlin},
   abstract = {03.12.2021},
   langid = {german}
@@ -147,10 +134,23 @@
   shorttitle = {{Liegt die Wahrheit irgendwo dazwischen? Eine plurale Perspektive auf globale Ungleichheit}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2022},
-  month = may,
+  month = feb,
   address = {University of T{\"u}bingen},
   url = {pdf/22-05-02_PluralePerspektiveUngleichheit.pdf},
   abstract = {02.05.2022},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschDoesTruthLie2025,
+  type = {{Public lecture}},
+  title = {{Does the truth lie somewhere in between? A pluralist perspective on global inequality}},
+  shorttitle = {{Liegt die Wahrheit irgendwo dazwischen? Eine plurale Perspektive auf globale Ungleichheit}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2025},
+  month = may,
+  address = {Christian-Albrechts-University Kiel},
+  url = {pdf/25-05-22_KielEntwicklung.pdf},
+  abstract = {19.01.2024},
   langid = {german}
 }
 
@@ -173,7 +173,20 @@
   shorttitle = {{Die Pluralit{\"a}t der Pluralen {\"O}konomik - {\"U}berlegungen zur Zukunft des Pluralismus in der VWL}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2021},
-  month = dec,
+  month = mar,
+  address = {University of Hamburg},
+  url = {pdf/24-11-22_PluralityPluralism.pdf},
+  abstract = {22.11.2024},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschPluralityPluralistEconomics2024,
+  type = {{Public lecture}},
+  title = {{The Plurality of Pluralist Economics}},
+  shorttitle = {{Die Pluralit{\"a}t der Pluralen {\"O}konomik}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2024},
+  month = nov,
   address = {University of Hamburg},
   url = {pdf/24-11-22_PluralityPluralism.pdf},
   abstract = {22.11.2024},
@@ -197,7 +210,7 @@
   type = {Keynote},
   title = {Pluralism, Complexity and the Effective Triangulation of Methods},
   year = {2019},
-  month = sep,
+  month = feb,
   address = {NEEC Summer Schoool on Complexity Economics, Behavioral Economics and Data Science at the University of Bochum},
   abstract = {02.09.2019},
   langid = {english}
@@ -217,7 +230,7 @@
   type = {Short Course at the {{EAEPE Pre-Conference}} for {{Young Scholars}}},
   title = {The {{Political Economy}} of {{Economic Complexity}}: {{Models}}, {{Data}} and {{Policy}}},
   year = {2019},
-  month = sep,
+  month = dec,
   address = {Warsaw University of Economics},
   url = {2019EAEPE-Complexity.qmd},
   abstract = {11.-12.09.2019},
@@ -241,7 +254,7 @@
   title = {{Why we need pluralist economics}},
   shorttitle = {{Warum braucht es Plurale {\"O}konomik?}},
   year = {2021},
-  month = jun,
+  month = sep,
   address = {University of Vienna},
   abstract = {09.06.2021 (together with Birte Strunk)},
   langid = {german}
