--- a/talks/podcasts.bib
+++ b/talks/podcasts.bib
@@ -2,8 +2,7 @@
   title = {Pluralist {{Economics And Improving The Science Of Economics}}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2023},
-  month = dec,
-  url = {https://www.youtube.com/watch?v=LclfJxXoKwU},
+  month = feb,
   abstract = {02.12.2023 Jack Roycroft-Sherry's Science Podcast},
   collaborator = {{Roycroft-Sherry}, Jack},
   langid = {english}
@@ -14,8 +13,17 @@
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2022},
   month = may,
-  url = {https://inderwirtschaft.home.blog/2022/05/27/folge-46-claudius-grabner-radkowitsch/},
   abstract = {27.05.2022 Podcast In der Wirtschaft},
   collaborator = {Cremer, Julia and Middelanis, Martin},
+  langid = {german}
+}
+
+@misc{graebner-radkowitschMotorolaUndFoerderdesaster2025,
+  title = {{Motorola und das F{\"o}rderdesaster in Flensburg (NDR)}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2025},
+  month = jun,
+  abstract = {Schleswig-Holstein Magazin},
+  collaborator = {{NDR}},
   langid = {german}
 }
