--- a/research/wp/workingpaper.bib
+++ b/research/wp/workingpaper.bib
@@ -1,28 +1,25 @@
 @article{altreiterTheorizingCompetitionInterdisciplinary2020,
-  title = {Theorizing {{Competition}}: {{An}} Interdisciplinary Approach to the Genesis of a Contested Concept},
-  author = {Altreiter, Carina and Gr{\"a}bner, Claudius and P{\"u}hringer, Stephan and Rogojanu, Ana and Wolfmayr, Georg},
-  year = {2020},
-  journal = {SPACE Working Paper},
-  number = {3},
-  url = {https://spatial-competition.com/wp-content/uploads/2020/10/space-wp3-theorizing-competition-1.pdf}
-}
-
-@article{altreiterTheorizingCompetitionInterdisciplinary2020a,
   title = {Theorizing Competition: An Interdisciplinary Framework},
   author = {Altreiter, Carina and Gr{\"a}bner, Claudius and P{\"u}hringer, Stephan and Rogojanu, Ana and Wolfmayr, Georg},
   year = {2020},
   journal = {SPACE Working Paper},
-  number = {4},
-  url = {https://spatial-competition.com/wp-content/uploads/2020/12/SPACE-WP4-CompetitionFramework1.pdf}
+  number = {4}
 }
 
-@article{grabner-radkowitschMisMeasuringCompetitiveness2021,
+@article{altreiterTheorizingCompetitionInterdisciplinary2020a,
+  title = {Theorizing {{Competition}}: {{An}} Interdisciplinary Approach to the Genesis of a Contested Concept},
+  author = {Altreiter, Carina and Gr{\"a}bner, Claudius and P{\"u}hringer, Stephan and Rogojanu, Ana and Wolfmayr, Georg},
+  year = {2020},
+  journal = {SPACE Working Paper},
+  number = {3}
+}
+
+@article{grabner-radkowitschMismeasuringCompetitivenessQuantification2021,
   title = {({{Mis}})Measuring Competitiveness: The Quantification of a Malleable Concept in the {{European Semester}}},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Hager, Theresa},
   year = {2021},
   journal = {ICAE Working Paper},
-  volume = {130},
-  url = {https://www.jku.at/fileadmin/gruppen/108/ICAE\_Working\_Papers/wp130.pdf}
+  volume = {130}
 }
 
 @article{grabner-radkowitschPathDependence2024,
@@ -30,8 +27,7 @@
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Kapeller, Jakob},
   year = {2024},
   journal = {IfSO Working Paper},
-  volume = {36},
-  url = {https://www.uni-due.de/imperia/md/content/soziooekonomie/ifsowp36_graebner-radkowitschkapeller_2024.pdf}
+  volume = {36}
 }
 
 @article{grabner-radkowitschSystemism2024,
@@ -39,8 +35,7 @@
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Kapeller, Jakob},
   year = {2024},
   journal = {ICAE Working Paper},
-  volume = {155},
-  url = {https://www.jku.at/fileadmin/gruppen/108/ICAE_Working_Papers/wp155.pdf}
+  volume = {155}
 }
 
 @article{grabnerCompetitionUniversalismIts2021,
@@ -48,8 +43,7 @@
   author = {Gr{\"a}bner, Claudius and P{\"u}hringer, Stephan},
   year = {2021},
   journal = {SPACE Working Paper},
-  volume = {7},
-  url = {https://spatial-competition.com/wp-content/uploads/2021/05/SPACE-WP7-CompetitionUniversalism.pdf}
+  volume = {7}
 }
 
 @article{grabnerDefiningInstitutionsReview2019,
@@ -58,8 +52,7 @@
   year = {2019},
   month = jan,
   journal = {ICAE Working Paper},
-  volume = {89},
-  url = {https://www.jku.at/fileadmin/gruppen/108/ICAE\_Working\_Papers/wp89.pdf}
+  volume = {89}
 }
 
 @article{grabnerEmergenceCoreperipheryStructures2020,
@@ -69,7 +62,7 @@
   month = aug,
   journal = {ZOE Discussion Papers},
   number = {6},
-  url = {https://zoe-institut.de/wp-content/uploads/2020/09/zoe-dp6-graebner-hafele-core-periphery.pdf}
+  file = {/Users/dozioegrc/Zotero/storage/YY8YWEIQ/Gräbner and Hafele - 2020 - The emergence of core-periphery structures in the .pdf}
 }
 
 @article{grabnerExportPerformancePrice2019,
@@ -86,8 +79,7 @@
   author = {Gr{\"a}bner, Claudius and Heimberger, Philipp and Kapeller, Jakob},
   year = {2020},
   journal = {IfSO Working Paper},
-  volume = {9},
-  url = {https://www.uni-due.de/imperia/md/content/soziooekonomie/ifsowp9\_ghk2020.pdf}
+  volume = {9}
 }
 
 @article{grabnerUnrealisticModelsHow2019,
